# skyexpo-matchmaking

./: .drone.yml  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.sh  docker-compose.yml  exclude-list-rsync.txt
backend/: .dockerignore  .pre-commit-config.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg
backend/config/: .env.template
backend/docker/: ci.sh  docker-compose.prod.yml
backend/docker/django/: Dockerfile
backend/docker/nginx/: Dockerfile  nginx.conf
backend/docker/traefik/: dynamic_conf.yml  traefik.yml
backend/insomnia/: Insomnia.yaml
backend/server/: api_urls.py  celery.py  urls.py
backend/server/apps/company/: admin.py  constants.py  models.py  urls.py  views.py
backend/server/apps/company/logic/: serializers.py
backend/server/apps/company/migrations/: 0001_initial.py
backend/server/apps/main/: views.py
backend/server/apps/main/logic/: __init__.py
backend/server/apps/matchmaking/: models.py  tasks.py  urls.py  views.py
backend/server/apps/matchmaking/logic/: querysets.py  serializers.py  services.py  tasks.py
backend/server/apps/matchmaking/migrations/: 0001_initial.py  0002_auto_20200117_1017.py
backend/server/apps/profile/: admin.py  constants.py  models.py  urls.py  views.py
backend/server/apps/profile/logic/: managers.py  querysets.py  representations.py  selectors.py  serializers.py  services.py
backend/server/apps/profile/management/commands/: create_angel_investor.py
backend/server/apps/profile/migrations/: 0001_initial.py  0002_auto_20191216_1233.py  0002_auto_20200309_1438.py  0003_auto_20200404_1509.py
backend/server/settings/: __init__.py
backend/server/settings/components/: celery.py  common.py  csp.py  ddt.py  drf.py
backend/server/settings/environments/: development.py  production.py
backend/server/utils/: exception_handler.py  fixture_command.py
backend/sql/: create_database.sql  drop_database.sql
backend/tests/: conftest.py  factories.py
backend/tests/test_apps/test_company/: test_models.py  test_serializers.py  test_views.py
backend/tests/test_apps/test_matchmaking/: test_models.py  test_querysets.py  test_serializers.py  test_services.py  test_tasks.py  test_views.py
backend/tests/test_apps/test_profile/: test_managers.py  test_models.py  test_querysets.py  test_selectors.py  test_serializers.py  test_services.py  test_views.py
backend/tests/test_server/: test_urls.py
mobile/: build.yaml  pubspec.yaml
mobile/lib/: main.dart  main.reflectable.dart  root_services.dart  routes.dart
mobile/lib/common/helpers/: get_view_height_without_keyboard_helper.dart
mobile/lib/common/models/: form_field_controller_model.dart  validation_error_model.dart
mobile/lib/common/services/: http.service.dart
mobile/lib/common/validators/: getValidators.validator.dart  index.dart  isNotEmpty.validator.dart  is_valid_email_validator.dart  is_valid_password_validator.dart  validators.dart
mobile/lib/common/widgets/: form_field_error_widget.dart  form_field_wrapper_widget.dart  form_text_field_widget.dart  on_init_widget.dart  submit_button_widget.dart  top-header.widget.dart
mobile/lib/config/: api.config.dart  api_config.dart  colors.config.dart  colors_config.dart  env_variables_config.dart  fonts.config.dart  fonts_config.dart  index.dart  routes.config.dart  routes_config.dart  routes_config.g.dart  values_config.dart
mobile/lib/core/configs/: bottom_navigation_elements_config.dart
mobile/lib/core/helpers/: load_env_file_helper.dart  set_up_network_debugger_helper.dart  set_up_redux_store.dart
mobile/lib/core/services/: http.service.dart  http_service.dart
mobile/lib/core/widgets/: auth_layout_widget.dart  bottom-navigation.widget.dart  bottom_navigation_element_widget.dart  bottom_navigation_layout_widget.dart  bottom_navigation_widget.dart  layout.widget.dart  layout_widget.dart  sliver_layout_widget.dart  solid_tab_indicator_widget.dart  tabs_layout_widget.dart
mobile/lib/store/: app-state.dart  app-state.g.dart  app_state.dart  app_state.g.dart  root-epic.dart  root_epic.dart
mobile/test/: isNotEmpty.validator_test.dart
mobile/test/common/validators/: is_not_empty_validator_test.dart
mobile/test/test_utills/: epics_test_utils.dart
scripts/: deploy.sh  push_deployment_images.sh
web-app/: .dockerignore  Dockerfile  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package.json
web-app/src/: App.js  configureStore.js  history.js  index.css  rootEpic.js  rootErrorBoundary.js  rootReducer.js  rootService.js
web-app/src/actions/: init.js
web-app/src/companyRegistrationForm/components/: FormQuestions.jsx  SelectTagsInput.jsx  formSteps.js  validationSchemas.js
web-app/src/companyRegistrationForm/container/: RegisterCompanyForm.jsx
web-app/src/config/: companyStageOptions.js  countryList.js  selectStyles.js  values.js
web-app/src/helpers/: countProgress.js  countryList.js  countryOptions.js  dateValidation.js  emailValidation.js  formInitialValues.js  formSteps.js  getNewCheckboxValues.js  getOptionsFromValues.js  getStepValues.js  helpers.spec.js  index.js  phoneNumberValidation.js  readFile.js  tags.js  validationSchemas.js
web-app/src/investorTypePage/: InvestorTypePage.jsx
web-app/src/mocks/: questions.js
web-app/src/registrationForm/actions/: registrationActions.js
web-app/src/registrationForm/components/: CheckboxGroup.jsx  FormFieldError.jsx  FormQuestions.jsx  RadioGroup.jsx  Select.jsx  SelectTagsInput.jsx  TeamMembers.jsx  TopHeader.jsx  UploadButton.jsx  UploadImage.jsx  index.js
web-app/src/registrationForm/container/: RegisteForm.jsx  RegisterForm.jsx
web-app/src/registrationForm/epics/: registrationEpic.js  registrationEpic.spec.js
web-app/src/routing/: MainRouter.jsx
web-app/src/services/: HttpService.js
web-app/src/welcomePage/: WelcomePage.jsx
(+119 files in other folders)
